admin/planning/releases/v0.8.0/RELEASE-READINESS.md
---
version: v0.8.0
date: 2026-01-10
readiness_score: 40
blocking_failures: 3
total_checks: 5
passed_checks: 2
warnings: 1
status: BLOCKED
---

# Release Readiness Assessment - v0.8.0

**Purpose:** Assess project readiness for v0.8.0 release
**Date:** 2026-01-10
**Status:** 🟠 Assessment in Progress

---

## 📊 Overall Readiness Summary

**Overall Readiness Status:** 🔴 NOT READY  
**Blocking Issues:** 3 identified  
**Release Type:** Minor

**Key Takeaways:** 3 blocking criteria need attention before release.

---

## 📊 Release Criteria Evaluation

### 🧪 1. Testing & Quality (Blocking)
**Status:** ✅ PASS
**Evidence:**
<details>
<summary>CI/CD Test Status</summary>

✅ All tests passing


</details>

---

### 📄 2. Documentation (Blocking)
**Status:** ❌ FAIL
**Evidence:**
<details>
<summary>Documentation Status</summary>

- CHANGELOG updated: ❌ No
- Release notes created: ❌ No

**Details:** Check `CHANGELOG.md` and `admin/planning/releases/v0.8.0/RELEASE-NOTES.md`
</details>

---

### 💻 3. Code Quality (Blocking)
**Status:** ⚠️ NEEDS MANUAL REVIEW
**Evidence:**
- Manual review required for:
  - Critical bugs fixed
  - No blocking issues
  - Code review completed

---

### 🚀 4. Release Preparation (Blocking)
**Status:** ⚠️ NEEDS ATTENTION
**Evidence:**
<details>
<summary>Release Preparation Status</summary>

- Release branch created: ❌ No
- Version numbers updated: ✅ Yes

**Details:** Expected branch: `release/v0.8.0`. Run `git branch -a | grep release` to check.

</details>

---

## 📊 Version Recommendation

**Recommended Version:** v0.8.0

**Rationale:** Automated checks need attention

---

## 🎯 Recommendation

**Status:** 🔴 NOT READY

**Next Steps:**
1. Review automated check results
2. Complete manual review sections
3. Address any failing checks

---

**Last Updated:** 2026-01-10
